# elements2canvas

./: .cursorignore  .gitignore  CLA.md  CONTRIBUTING.md  README.md  blink_layers.json  blink_property_trees.json  canvas.html  canvaskit_blob_test.html  canvaskit_dstin_test.html  canvaskit_exact_test.html  canvaskit_glyph_compare.html  check_blur.py  compute_layer_tree.js  compute_stacking_nodes.js  computed_layer_tree.json  font_test.html  gradient-fill-text.html  layer_tree.json  layers.json  layout_tree.json  layout_tree_pre_shape.json  layout_tree_reconstructed.json  paint_artifact.json  paint_artifact_property_trees.json  property_trees.json  pseudo.html  raw_paint_ops.json  replicate-text-shaping.html  skia_viewer.html  stacking_nodes.json  temp  test.html  test2.html  test3.html  test4.html  test_debug.html  text_painter.js  text_painter.wasm
01_layout/: extract.sh  (+1 more)
04_paint/block_painter/: CMakeLists.txt  Makefile  block_painter  block_painter.cc  block_painter.h  input.json  types.h
04_paint/block_painter/docs/: block_painter.md  block_painter_call_diagram.md  block_painter_hierarchy.md  block_painter_trace_reference.md
04_paint/block_painter/src/: draw_commands.h  json_parser.h
04_paint/text_painter/: CMakeLists.txt  Makefile  Makefile.wasm  decoration_line_painter.h  draw_commands.h  input_decorated.json  input_disclosure.json  input_dotted.json  input_double.json  input_marker.json  input_vertical.json  input_wavy.json  input_with_stroke.json  json_parser.h  main.cc  text_decoration_info.h  text_decoration_painter.h  text_painter.cc  text_painter.wasm
(+184 files in other folders)
